# cuda-oxide

./: CONTRIBUTING.md  Justfile  README.md  dependency-licenses.csv  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: README.md  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cargo-deny.yml  ci.yml  clippy.yml  fmt.yml  unit-tests.yml
crates/cargo-oxide/: README.md
crates/cargo-oxide/src/: commands.rs
crates/cuda-bindings/: build.rs
crates/cuda-bindings/src/: lib.rs
crates/cuda-core/src/: event.rs
crates/cuda-host/src/: ltoir.rs
crates/cuda-macros/: README.md
crates/cuda-macros/src/: lib.rs
crates/dialect-mir/: README.md
crates/dialect-nvvm/: README.md
crates/llvm-export/: README.md
crates/mir-importer/: README.md
crates/mir-lower/: Cargo.toml  README.md
crates/reserved-oxide-symbols/: README.md
crates/rustc-codegen-cuda/: README.md  STATUS.md  rust-toolchain.toml
crates/rustc-codegen-cuda/examples/tuple_return/: Cargo.toml
crates/rustc-codegen-cuda/examples/tuple_return/src/: main.rs
cuda-oxide-book/appendix/: building-from-source.md  ecosystem.md  glossary.md  supported-features.md
cuda-oxide-book/compiler/: adding-new-intrinsics.md  architecture-overview.md  lowering-pipeline.md  mir-importer.md  mlir-dialects.md  pliron.md  rustc-codegen-cuda.md  rustc-public.md
cuda-oxide-book/getting-started/: hello-gpu.md  installation.md
cuda-oxide-book/gpu-programming/: error-handling-and-debugging.md
scripts/: smoketest.sh
(+62 files in other folders)
