[package]
name = "tuple_return"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Standalone crate, not part of the parent workspace.
[workspace]

# Regression for issue #79: kernel calls a device-reachable function that
# returns a non-empty tuple by value. With inlining suppressed the
# tuple-returning `mir.call` survives into the `dialect-mir` -> LLVM dialect
# lowering, where the buggy `is_unit` check (call.rs ~line 370) treats
# every tuple as `()` and forces the LLVM call result to `void`. The
# lowering then tries to `erase_operation` a MIR op that still has uses,
# and pliron panics with "Operation with use(s) being erased".
#
# Build with:
#   cargo oxide run tuple_return

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
